FIx #3717 [Mobile] The "More experiments" button is partially overlapped by the "App Store" Lockbox button fixed.

--- a/frontend/src/app/components/FeaturedExperiment/index.scss
+++ b/frontend/src/app/components/FeaturedExperiment/index.scss
@@ -266,6 +266,7 @@
 
       border: 0;
       margin: 0;
+      z-index : 2;
 
       img {
         height: 60px;
